# ShortTerm-memory

./: .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml  tnr.yml
src/logs/: logger.py
src/mem_db/: vecto.py
src/shortterm_memory/: ChatbotMemory.py  chatbot_memory.py
tests/: memory_test.py
